app/tests/fails/panic_two_errors.stderr
error: this macro can only be applied to a function that does not return a Result. Signature: Result < Person, String >
  --> tests/fails/panic_two_errors.rs:10:44
   |
10 | fn create_person(name: String, age: u8) -> Result<Person, String> {
   |                                            ^^^^^^^^^^^^^^^^^^^^^^

error: panic needs a mesage!

         = help: try to add a message: panic!("Example".to_string());
         = note: we will add message to Result's Err

  --> tests/fails/panic_two_errors.rs:12:9
   |
12 |         panic!();
   |         ^^^^^^^^^
